# fishy-edge

./: Cargo.toml  Dockerfile  config.yaml  justfile  spec.yaml  sqlx-data.json
.sqlx/: query-00e6c2ba17d9aecde3abe590c648cae02317cb34a4d6533b87186dd535dd0c71.json  query-0357b796e720fbf79ef413e136329adae7b34993c8eac47b2a52635707a7eeab.json  query-07e312d6dd2c169fbd575f1b69e584c27c24e3f9620ed4a9788874e1be68c198.json  query-08e1e38d7d971ab36894fb3e0d6461d11795c07abf37e069eebe0fb9bc3fd3b3.json  query-0d9f3721a0949c933866c693777f0995df2ff8d72837adb7c8d7dc30aed033c9.json  query-1abd7468849cac23c2d88ff53d650c915fcb0402b4a92a60e19045686011289f.json  query-20fcba0cd35f00b45b2deab9251a49480fc90272d6675030bb7433b530196f52.json  query-2493822cfaac5f75d4d5d7c2f7fd6751fd31c2e74dfe728b1709d783a9fc65ba.json  query-28f9fc2f01f289779caeebb39780a75e2df7c34f5d764639d00bf14e19156d41.json  query-2bdf58576e0781cc279f0cab96822644e5bc11b651af349b86a12177224b36ff.json  query-2d7e2ac30fee719ffe1a8b26fc209185a19c035c896a1af229d49a1a59317728.json  query-2dbd6bc60473428fdff1e1339174c5e0e0abd597f23e12b5590f76f89096d9cf.json  query-386c667ca6175278b066c2bc7dd53b3e1b707e8b7f8de2ab8cac291b37bd4585.json  query-3ca77be1104ca7655c5ccc158762d8aaf86d98b7a2bb1c040f6216122b52b084.json  query-402d4e640bf17b62b453ff76aa565d4edc1c05eb5a7d04881bfc95a5032734bf.json  query-433844eed7a9c7a76a2cdbea0aa85b36e3221750ca238c4505fd272c2baebc42.json  query-4aa3c97ec41078895a18a3b085d633647cbcf862d4940e44d2ef575c9f81c440.json  query-4f8469cea3aca16be73e3c40a58768106a62e5aae8ffe853b7b6b12cc4c4ab60.json  query-55616a47cb218b5051e728d11cb4e950aa3de6bf510375c7817ee44ce8ba7bb4.json  query-5581d02e9774b63001133dfda06edb6617193ca96c91e133c3c8f32c11441276.json  query-61834e4429ea07506494ed63b7771e850559e4de2cf9a51a4c3f387fb7cbdcc2.json  query-6f24fb88a0398ea65ca5458a1abb6a00a2456382cf58f530bacddb197506e5ce.json  query-7088dc1934911f9f468950d61d3e7d2ee93640f96b53c196eaff57b9acf2a66a.json  query-74fb5ebcb3bb6d6358d04368ad3b3a4d92a29335d626f84220391863b0aa729e.json  query-844691a98e288699c77064d9e4afd9807be4f6f0491c7a2b3629e03594388be2.json  query-85aad5757070029c49dfad3ca03100159dd41f6743a8730aeaefbe39e2dd3b41.json  query-8c19df2099af738036da04e2333065d5f0ccff2d87ab96d24732a3a038867f4b.json  query-9a4127d56bae71fc165e2643655c3b7b711109c39abc2bfbda3d3ba93bedcd3d.json  query-9b23edabc0041cf2b8cb4735e71ab19b068914c08da7e8dfec34950d0e67c75a.json  query-a2c496be8c7b12ddd1e88d01d610dc9e7d4da538f9a5295e8ff195452b2289b7.json  query-a3c9cbedc6c79f6c92b74d3d9445f925a7aecc395850b7605ff460734872b3a7.json  query-a71aac8ea6b38ed60a7f4ed1145ed158ff712904fd6bcb45fbbadcbc94c07983.json  query-ae84944092c7c715cd1678f5d0dd581d318ae1d51da6cbe54a1f1d6845e95367.json  query-b0bed5e03cf5fe7ab59fecc8582fbe8a8201928d4b35bd09a21697586ce883c8.json  query-b17bce041820fdab5adc775404ac61bde540b38330f8063a6b5e8b441c1b8730.json  query-c5503e36f6c88937f352ffd6ade7e7b9913f69576279506e5721378a822e7fd3.json  query-c7983383193f150e91efdafcf90adb9fd15a671684f5b04fdcbd010837935b1b.json  query-c7b13738a6ffb07e7bb9af99fbe370b1145057276c7faa4f69d2f60b939a694f.json  (+14 more)
config/: base.yaml
migrations/: 20230209035937_create_fish_table.sql  (+19 more)
(+120 files in other folders)
