[package]
name = "fishy_edge"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = 'fishy_edge'

[dependencies]
actix-web = { version = "4", features = ["cookies"] }
actix-web-lab = "0.20"
actix-web-httpauth = '0.8'
config = { version = "0.13", default-features = false, features = ["yaml"]}
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
anyhow = "1"
rust-s3 = "0.33.0"
argon2 = { version = "0.5", features = ["std"] }
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio",
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"]}
once_cell = "1"
fake = "2"
